# beamline-worker

./: .gitignore  Cargo.toml  Makefile  README.md
.ai/: architecture.md  plans.md  progress.md  project.md
src/: config.rs  dlq.rs  error.rs  executor.rs  health.rs  lib.rs  main.rs  protocol.rs
src/handlers/: common.rs  fs.rs  http.rs  human.rs  mod.rs  script.rs  sql.rs
src/observability/: metrics.rs  mod.rs  pii.rs
tests/: integration_resubscribe.rs  unit.rs
